# linux-base

./: .gitignore
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: fdflags.1421846676396.pdom  fdflags.language.settings.xml  holefile.1421841932930.pdom  holefile.language.settings.xml  inout.1421836758063.pdom  inout.1421839788859.pdom  inout.language.settings.xml  linux-lib.1421848810082.pdom  linux-lib.1421849651915.pdom  linux-lib.language.settings.xml  ls.1421836247999.pdom  ls.1421839816780.pdom  ls.language.settings.xml  pidprint.1421839465630.pdom  pidprint.1421839804991.pdom  pidprint.language.settings.xml  shell.1421839983719.pdom  shell.language.settings.xml  stdinout.1421838927947.pdom  (+4 more)
atexit/: CMakeLists.txt
atexit/source/: main.cpp
echo/: CMakeLists.txt
echo/source/: main.cpp
fdflags/: .cproject  .project  CMakeLists.txt
fdflags/source/: main.cpp
forkstdout/: CMakeLists.txt
forkstdout/source/: main.cpp
holefile/: .cproject  .project  CMakeLists.txt
holefile/source/: main.cpp
inout/: .cproject  .project  CMakeLists.txt
inout/source/: main.cpp
limits/: CMakeLists.txt
limits/source/: limits.cpp
linux-lib/: .cproject  .project  CMakeLists.txt
linux-lib/include/: fileflags.h
linux-lib/source/: fileflags.cpp
ls/: .cproject  .project  CMakeLists.txt
pidprint/: .cproject  .project  CMakeLists.txt
shell/: .cproject  CMakeLists.txt
shell/source/: shell.cpp
stdinout/: .cproject  .project  CMakeLists.txt
ugidprint/: .cproject  .project  CMakeLists.txt
ugidprint/source/: ugidprint.cpp
(+48 files in other folders)
